--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "eslint-plugin-react": "^7.6.1",
     "express": "^4.13.4",
     "extract-text-webpack-plugin": "^3.0.0",
+    "firebase": "^4.10.0",
+    "moment": "^2.20.1",
     "prop-types": "^15.6.0",
     "raven-js": "^3.22.1",
     "react": "^16.2.0",
